--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fluttertoast: ^8.2.8
   gap: ^3.0.1
   google_fonts: ^6.2.1
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
